[package]
name = "aa_wasmtime"
version = "0.1.0"
authors = ["Benedict Gaster <benedict.gaster@uwe.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.32" }
wasmtime = { version = "0.19.0" }